--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,7 +214,7 @@
     width:300px;
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
     font-family: 'Lato', sans-serif;
-    background: -webkit-radial-gradient(left top, circle cover, rgba(142, 233, 161, 0.9) 15%, rgba(118, 204, 175, 0.9) 50%, rgba(142, 233, 161, 0.9) 85%);
+    background-color: whitesmoke;
   }
   
   #reminder-card:hover {
