--- a/styles/styles.css
+++ b/styles/styles.css
@@ -262,7 +262,7 @@
 
 
   #top-part {
-    background: -webkit-radial-gradient(left top, circle cover, rgba(142, 233, 161, 0.9) 15%, rgba(118, 204, 175, 0.9) 50%, rgba(142, 233, 161, 0.9) 85%);
+    background: -webkit-radial-gradient(left top, circle cover, #75204228, #7520425d, #75204228);
 
   }
   
@@ -433,7 +433,7 @@
   footer {
     width: 100%;
     height: 150px;
-    background: -webkit-radial-gradient(left top, circle cover, rgba(142, 233, 161, 0.9) 15%, rgba(118, 204, 175, 0.9) 50%, rgba(142, 233, 161, 0.9) 85%);
+    background: -webkit-radial-gradient(left top, circle cover, #75204228, #7520425d, #75204228);
     margin-top: 200px;
     color: black;
     text-align: center;
@@ -441,18 +441,18 @@
   }
   
   form {
-    background: rgba(202, 242, 212, 0.4);
+    background: -webkit-radial-gradient(left top, circle cover, #ecbed028, #eecdda5d, #f0d2de28);
     padding: 15px;
   }
   
   #form {
-    background: rgba(202, 242, 212, 0.4);
+    background: -webkit-radial-gradient(left top, circle cover, #ecbed028, #eecdda5d, #f0d2de28);
     padding: 15px;
 
   }
 
   .form {
-    background: rgba(202, 242, 212, 0.4);
+    background: -webkit-radial-gradient(left top, circle cover, #ecbed028, #eecdda5d, #f0d2de28);
     padding: 15px;
   }
   
